[tool.poetry]
name = "homebase-indexer"
version = "0.1.0"
description = ""
authors = ["namesty <nestor09amesty@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jsonpickle = "^2.0.0"
dipdup = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
